[package]
name = "rv32ima-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = "z"

[features]
default = []
unsafes = []

[dependencies]
